[metadata]
name = pagehub
version = attr: pagehub.__version__
url = https://github.com/ZhaoQi99/PageHub
project_urls = 
    Homepage = https://github.com/ZhaoQi99/PageHub
    Changelog = https://github.com/ZhaoQi99/PageHub/releases
    Source = https://github.com/ZhaoQi99/PageHub
    Issue Tracker = https://github.com/ZhaoQi99/PageHub/issues
    # Documentation = https://github.com/ZhaoQi99/PageHub
author = Qi Zhao
author_email = zhaoqi99@outlook.com
# "Trove classifiers" for PyPI (https://pypi.org/classifiers/).
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
license_files = LICENSE
description = Archive your web page.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = archiving,web archiving,playwright,backup

[options]
install_requires = 
    django
    django-ninja
    click
    requests
    hypercorn
    playwright
python_requires = >=3.8
packages = find:

[options.entry_points]
console_scripts =
    pagehub = pagehub.cli:main

[options.packages.find]
exclude =
    tests
    *.tests.*

[black]
line-length = 88

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,E701,E501
